--- a/.gitignore
+++ b/.gitignore
@@ -15,37 +15,6 @@ training/pretrained-models/ssd_resnet50_v1_fpn_640x640_coco17_tpu-8/saved_model/
 training/pretrained-models/ssd_resnet50_v1_fpn_640x640_coco17_tpu-8/saved_model/variables/variables.data-00000-of-00001
 training/pretrained-models/ssd_resnet50_v1_fpn_640x640_coco17_tpu-8/saved_model/variables/variables.index
 training/reference/checkpoint
-training/reference/ckpt-8.data-00000-of-00001
-training/reference/ckpt-8.index
-training/reference/ckpt-9.data-00000-of-00001
-training/reference/ckpt-9.index
-training/reference/ckpt-10.data-00000-of-00001
-training/reference/ckpt-10.index
-training/reference/ckpt-11.data-00000-of-00001
-training/reference/ckpt-11.index
-training/reference/ckpt-12.data-00000-of-00001
-training/reference/ckpt-12.index
-training/reference/ckpt-13.data-00000-of-00001
-training/reference/ckpt-13.index
-training/reference/ckpt-14.data-00000-of-00001
-training/reference/ckpt-14.index
-training/reference/pipeline_new.config
-training/reference/eval/events.out.tfevents.1650618290.ubuntu-Precision-3530.9161.0.v2
-training/reference/eval/events.out.tfevents.1650620375.ubuntu-Precision-3530.9411.0.v2
-training/reference/eval/events.out.tfevents.1650621128.ubuntu-Precision-3530.9804.0.v2
-training/reference/eval/events.out.tfevents.1650621321.ubuntu-Precision-3530.10098.0.v2
-training/reference/train/events.out.tfevents.1650552128.ubuntu-Precision-3530.1154.0.v2
-training/reference/train/events.out.tfevents.1650552342.ubuntu-Precision-3530.1645.0.v2
-training/reference/train/events.out.tfevents.1650614856.ubuntu-Precision-3530.4524.0.v2
-training/reference_2/checkpoint
-training/reference_2/ckpt-1.data-00000-of-00001
-training/reference_2/ckpt-1.index
-training/reference_2/ckpt-2.data-00000-of-00001
-training/reference_2/ckpt-2.index
-training/reference_2/ckpt-3.data-00000-of-00001
-training/reference_2/ckpt-3.index
-training/reference_2/pipeline_new.config
-training/reference_2/eval/events.out.tfevents.1650625355.ubuntu-Precision-3530.14097.1.v2
-training/reference_2/train/events.out.tfevents.1650624304.ubuntu-Precision-3530.12669.0.v2
-training/reference_2/train/events.out.tfevents.1650625329.ubuntu-Precision-3530.14097.0.v2
 experiments/training/reference/eval/events.out.tfevents.1650612107.ubuntu-Precision-3530.2252.0.v2
+events.out.tfevents.*
+training/pretrained-models/*
